--- a/static/stream.css
+++ b/static/stream.css
@@ -4,6 +4,8 @@ div#main-container { display: flex; flex-grow: 1; }
 div#app-top { display: flex; flex-grow: 1; }
 div#timer-top { display: flex; flex-grow: 1; }
 
+div#menu-button       { display: none; }
+
 /* Contains the full timer */
 div#timer-container { display: flex; flex-direction: column; flex-grow: 1; }
 
@@ -11,12 +13,12 @@ button { display: none }
 
 /* Game title */
 div#timer-title { font-size: 32px; text-align: center; font-weight: bold;
-	          background: -webkit-linear-gradient(rgba(64, 64, 128, 0), rgba(33, 33, 65, 0.3));
+                  background: -webkit-linear-gradient(rgba(64, 64, 128, 0), rgba(33, 33, 65, 0.3));
                 }
 /* Category name */
 div#timer-category { font-size: 21px; text-align: center;
-	             background: -webkit-linear-gradient(rgba(32, 32, 64, 0.3), rgba(0, 0, 0, 0.6));
-		     padding-bottom: 0.25em;
+                     background: -webkit-linear-gradient(rgba(32, 32, 64, 0.3), rgba(0, 0, 0, 0.6));
+                     padding-bottom: 0.25em;
                    }
 
 /* Main timer showing the full running time */
@@ -25,35 +27,43 @@ div#main-timer {
                  text-align: right;
                }
 
-div#main-timer.neutral        { background: -webkit-linear-gradient(#eee, #333); -webkit-background-clip: text; -webkit-text-fill-color: transparent; }
-div#main-timer.gaining-ahead  { background: -webkit-linear-gradient(#beb, #030); -webkit-background-clip: text; -webkit-text-fill-color: transparent; }
-div#main-timer.losing-ahead   { background: -webkit-linear-gradient(#cec, #131); -webkit-background-clip: text; -webkit-text-fill-color: transparent; }
-div#main-timer.gaining-behind { background: -webkit-linear-gradient(#ecc, #311); -webkit-background-clip: text; -webkit-text-fill-color: transparent; }
-div#main-timer.losing-behind  { background: -webkit-linear-gradient(#ebb, #300); -webkit-background-clip: text; -webkit-text-fill-color: transparent; }
-div#main-timer::after         { content: " "; white-space: pre; font-size: 20px; }
+div#main-timer.neutral        > div.time-readout > div { background: -webkit-linear-gradient(#eee, #333); -webkit-background-clip: text; -webkit-text-fill-color: transparent; }
+div#main-timer.gaining-ahead  > div.time-readout > div { background: -webkit-linear-gradient(#beb, #030); -webkit-background-clip: text; -webkit-text-fill-color: transparent; }
+div#main-timer.losing-ahead   > div.time-readout > div { background: -webkit-linear-gradient(#cec, #131); -webkit-background-clip: text; -webkit-text-fill-color: transparent; }
+div#main-timer.gaining-behind > div.time-readout > div { background: -webkit-linear-gradient(#ecc, #311); -webkit-background-clip: text; -webkit-text-fill-color: transparent; }
+div#main-timer.losing-behind  > div.time-readout > div { background: -webkit-linear-gradient(#ebb, #300); -webkit-background-clip: text; -webkit-text-fill-color: transparent; }
+div#main-timer::after                                  { content: " "; white-space: pre; font-size: 20px; }
 
 /* Contains splits as well as headers */
-div#splits-container  { display: flex; flex-direction: row; flex-grow: 1; align-items: stretch;
-                      }
+div#splits-container  { }
+
+div#splits-container>div:nth-child(2n) { background-color: rgba(0, 0, 0, 0.2);
+                                       }
+
+div#splits-container > div.split { display: flex; flex-direction: row; flex-grow: 1;
+                                 }
 
 /* Contains headers with column descriptions */
-div#splits-listheader { }
-div.header div        { align-items: center }
+div#splits-listheader                   { }
+div#split-listheader > div.split-column { text-align: center;
+                                        }
+div.header div                          { align-items: center;
+                                        }
 
 /* All row containers will have class 'split' */
 div.split { display: flex; flex-direction: row;
+            padding-top: 3px; padding-bottom: 3px;
+            color: white; font-size: 16px; font-weight: bold;
           }
 
-div.split div { display: flex; flex-direction: column; flex-grow: 1;
-              }
+/*div.split > div { display: flex; flex-direction: column; flex-grow: 1; }*/
 
 /* Denotes the currently active split */
-div#splits-container div.current { display: none;
+div#splits-container>div.current { background-color: rgba(0, 0, 128, 0.5);
                                  }
 
 /* All individual split segments.  Use this to modify order/display properties/etc. */
-div.split div                 { display: none; }
-div.split div.pb              { display: none; }
+div.split div.pb              { width: 25%; }
 div.split div.gold            { display: none; }
 div.split div.average         { display: none; }
 div.split div.worst           { display: none; }
@@ -62,13 +72,30 @@ div.split div.running-pb      { display: none; }
 div.split div.running-gold    { display: none; }
 div.split div.running-average { display: none; }
 div.split div.running-worst   { display: none; }
-div.split div.running-current { display: none; }
+div.split div.running-current { width: 25%; }
+
+/* Split Time segments */
+div.split-column > div.time-readout { justify-content: flex-end; }
+div#main-timer   > div.time-readout { justify-content: center; }
+div.time-readout                    { display: flex; flex-direction: row; flex-wrap: nowrap; text-align: right; } /* padding-right: 0.2em; } */
+div.time-usecond                    { width: 2ex; }
+div.time-second                     { width: 2ex; }
+div.time-minute                     { width: 2ex; }
+div.time-hour                       { width: 2ex; }
 
 /* Segment names */
-div.split div.split-name      { flex-grow: 2; align-items: flex-start; }
+div.split div.split-name      { flex-grow: 2; align-items: flex-start;
+                                padding-left: 0.2em; overflow: hidden;
+                              }
 
-div.gold-split                { -webkit-text-fill-color: gold; }
-div.ahead-split               { -webkit-text-fill-color: green; }
-div.behind-split              { -webkit-text-fill-color: red; }
+div.gold-split                { -webkit-text-fill-color: gold; 
+                                text-shadow: 0px 0px 4px black;
+                              }
+div.ahead-split               { -webkit-text-fill-color: green; 
+                                text-shadow: 0px 0px 4px black;
+                              }
+div.behind-split              { -webkit-text-fill-color: red; 
+                                text-shadow: 0px 0px 4px black;
+                              }
 div.gaining-split             { filter: brightness(115%); }
 div.losing-split              { filter: brightness(85%); }
