--- a/static/view.css
+++ b/static/view.css
@@ -1,33 +1,35 @@
-html { font-size: 100%; }
+html { font-size: 100%; overflow: hidden; }
 
-body { font-family: sans-serif; display: flex; height: 100%; margin: 0; }
+body { font-family: sans-serif; color: white; display: flex; height: 100%; margin: 0; }
 
 /* Top-level containers */
 div#main-container { display: flex; flex-grow: 1; }
 div#app-top { display: flex; flex-grow: 1; }
 div#timer-top { display: flex; flex-grow: 1; }
 
-/* Menus */
-div.modal { position: absolute; top: 0; left: 0; width: 20em; max-height: 70%; border-radius: 5px 5px 30px 5px; padding-top: 0.5em; padding-left: 0.5em; padding-bottom: 0.5em; z-index: 15; background: #FFF; }
-div.modal-background { position: absolute; top: 0; left: 0; height: 100%; width: 100%; z-index: 10; background-color: rgba(0,0,0,0.5); }
-
-div.modal > div.menu-button { width: 100%; margin-top:1px; margin-bottom:1px; padding-top:1px; padding-bottom:1px; cursor: default; border-radius: inherit; }
-div.modal > div.menu-button:hover { background: #CCCCCC; background: linear-gradient(90deg, rgba(150, 150, 255, 1) 0%, rgba(255, 255, 255, 1) 90%); }
-
 /* Contains the full timer */
 div#timer-container { display: flex; flex-direction: column; flex-grow: 1; }
 
 /* Game title */
-div#timer-title { font-size: 1.5rem; text-align: center; }
+div#timer-title
+{
+  font-size: 1.5rem; text-align: center; font-weight: bold;
+  background: -webkit-linear-gradient(rgba(64, 64, 128, 0), rgba(33, 33, 65, 0.3));
+}
 
 /* Category name */
-div#timer-subtitle { font-size: 1.25rem; text-align: center; }
+div#timer-subtitle
+{
+  font-size: 1.15rem; text-align: center;
+  background: -webkit-linear-gradient(rgba(32, 32, 64, 0.3), rgba(0, 0, 0, 0.6));
+  padding-bottom: 0.25em;
+}
 
 /* Main timer showing the full running time */
 div#main-timer
 {
-  border-top: 1px solid gray; border-bottom: 1px solid gray;
-  font-size: 3.25rem; font-weight: bold; letter-spacing: -4px;
+  border-top: 1px solid gray;
+  font-size: 4.50rem; font-weight: bold; letter-spacing: -4px;
   text-align: center; width: 100%;
 }
 
@@ -36,7 +38,7 @@ div#main-timer.gaining.ahead  { background: -webkit-linear-gradient(#beb, #030);
 div#main-timer.losing.ahead   { background: -webkit-linear-gradient(#cec, #131); -webkit-background-clip: text; -webkit-text-fill-color: transparent; }
 div#main-timer.gaining.behind { background: -webkit-linear-gradient(#ecc, #311); -webkit-background-clip: text; -webkit-text-fill-color: transparent; }
 div#main-timer.losing.behind  { background: -webkit-linear-gradient(#ebb, #300); -webkit-background-clip: text; -webkit-text-fill-color: transparent; }
-div#main-timer::after         { content: " "; white-space: pre; font-size: 1.25rem; }
+div#main-timer::after         { content: " "; white-space: pre; font-size: 1.00rem; }
 
 /* Time offset +/- indicator, used in split rows and main timer */
 span.time-sign      { visibility: hidden; }
@@ -52,10 +54,10 @@ div.segments-header>div.header { align-items: center; display: inline; justify-c
 div.split-column                     { display: inline; }
 
 /* Display of segments */
-div.segment                  { display: flex; flex-wrap: wrap; }
-div.segment div.segment-name { padding-left: 0.2rem; color: black; font-size: 1.25rem; font-weight: bold; }
+div.segment                  { display: flex; flex-wrap: wrap; padding-top: 0.5ex; }
+div.segment div.segment-name { padding-left: 0.2rem; color: white; font-size: 1.15rem; font-weight: bold; }
 
-div.segment.even            { background-color: rgba(0, 0, 0, 0.10); }
+div.segment.even            { background-color: rgba(0, 0, 0, 0.20); }
 
 /* Denotes the currently active split */
 div.segment.current        { background-color: rgba(0, 128, 255, 0.25) !important; }
@@ -90,7 +92,7 @@ div.segments-header>div.header.running-diff.average { display: none; }
 div.segments-header>div.header.running-diff.worst   { display: none; }
 
 /* All individual split segments.  Use this to modify order/display properties/etc. */
-div.segment>div.split-column                  { display: none; flex-wrap: nowrap; flex-grow: 0; align-items: flex-end; padding-right: 2px; color: black; font-size: 1.25rem; font-weight: bold; text-align: right; }
+div.segment>div.split-column                  { display: none; flex-wrap: nowrap; flex-grow: 0; align-items: flex-end; color: white; font-size: 1.35rem; font-weight: bold; text-align: right; }
 div.segment>div.segment-name                  { width: 100%; }
 
 div.segment.upcoming>div.pb                   { display: flex; width: 33%; order: 2; }
